<resources>
    <string name="app_name">Yatzy</string>
    <string name="total_sum">Total sum:</string>
    <string name="yatzy">Yatzy:</string>
    <string name="chance">Chance:</string>
    <string name="full_house">Full House:</string>
    <string name="large_straight">Large straight:</string>
    <string name="small_straight">Small straight:</string>
    <string name="four_of_a_kind">Four of a kind:</string>
    <string name="three_of_a_kind">Three of a kind:</string>
    <string name="two_pairs">Two Pairs:</string>
    <string name="one_pair">One Pair:</string>
    <string name="bonus">Bonus:</string>
    <string name="number_0">0</string>
    <string name="sum">Sum:</string>
    <string name="sixes">Sixes:</string>
    <string name="fives">Fives:</string>
    <string name="fours">Fours:</string>
    <string name="threes">Threes:</string>
    <string name="twos">Twos:</string>
    <string name="ones">Ones:</string>
    <string name="name">Name:</string>
    <string name="start_game">Start game</string>
    <string name="save">save</string>
    <string name="roll_dice">roll dice</string>
</resources>
